--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-code/8_next_code_copy_&_paste_when_used/*
-code/9_next_code_copy_&_paste_when_used/*
-code/10_next_code_copy_&_paste_when_used/*
-code/11_next_code_copy_&_paste_when_used/*
-code/12_next_code_copy_&_paste_when_used/*
-code/13_next_code_copy_&_paste_when_used/*
-code/14_next_code_copy_&_paste_when_used/*
-code/15_next_code_copy_&_paste_when_used/*
-
+code/next_code_copy_&_paste_when_used/*
